# uefipxe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/src/: main.rs
bootloader/src/boot/: chainload.rs  mod.rs
bootloader/src/cli/: commands.rs  mod.rs  parser.rs  repl.rs
bootloader/src/network/: dhcp.rs  http.rs  init.rs  mod.rs  verify.rs
bootloader/src/storage/: config.rs  file.rs  mod.rs
bootloader/src/util/: error.rs  logger.rs  mod.rs
scripts/: build.sh  create-esp.sh  qemu-test.sh
